# personal-library-api

./: .env.example  .gitignore  README.md  pyproject.toml
src/back_end_library/: auth.py  create_tables.py  database.py  main.py  models.py  schemas.py
src/back_end_library/routers/: books.py  profile.py
